--- a/.gitignore
+++ b/.gitignore
@@ -150,6 +150,8 @@ ClientBin/
 *.[Pp]ublish.xml
 *.pfx
 *.publishsettings
+*.sublime-project
+*.sublime-workspace
 
 # RIA/Silverlight projects
 Generated_Code/
